--- a/src/App.css
+++ b/src/App.css
@@ -122,13 +122,15 @@ body,html{
   font-family: 'Montserrat', sans-serif;
 }
 
-.btn:hover{
-  color:#fca311;
-  background-color: #000;
-  cursor: pointer;
-  transition: ease-out .2s;
+@media(min-width:401px){
+  .btn:hover{
+    color:#fca311;
+    background-color: #000;
+    cursor: pointer;
+    transition: ease-out .2s;
+  }
+  
 }
-
 
 
 
@@ -225,5 +227,33 @@ padding:  0 20px 0 20px;
 
 }
 
+
+@media (max-width:400px){
+  .Tasks ul{
+    padding: 2px;
+    margin: 4px;
+    
+  }
+  .Tasks ul li{
+    margin-top: 2px;
+    
+  }
+  .Tasks{
+    margin-top: 5px;
+  }
+  .ToDolist{
+    padding: 0;
+  }
+  .btn:hover{
+    
+  }
+
+  .btn:active{
+    color:#fca311;
+  background-color: #000;
+  cursor: pointer;
+  transition: ease-out .2s;
+  }
+}
 
 
